--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <body>
 
 <div class="container">
-    <img src="antilose.jpeg" alt="Anti Sleep Cold Brew Product" class="product-image">
+    <img src="relentless.png" alt="Anti Sleep Cold Brew Product" class="product-image">
 
     <h1>Don't sleep on your dreams.</h1>
     <div class="subheadline">
